# server-location-tracker

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml
src/: main.rs  utils.rs
src/databases/: connection.rs
src/models/: location.rs  user.rs
