[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
axum = { git="https://github.com/tokio-rs/axum.git", release = "axum-v0.6.15", features = [ "multipart" ] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.1", features = ["serde", "v4"] }
surrealdb = { git = "https://github.com/surrealdb/surrealdb" }
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
once_cell = "1.17.1"
dotenvy = "0.15.7"
